cmake_minimum_required(VERSION 3.10)

project(E_Olymp)

add_executable(task1     Simple_Problem.cpp)
add_executable(task9     N_digit_Numbers_1.cpp)
add_executable(task115   Two_Digits.cpp)
add_executable(task248   Young_Gardener.cpp)
add_executable(task263   Three_Ones.cpp)
add_executable(task313   A+B_1.cpp)
add_executable(task314   A+B_2.cpp)
add_executable(task329   Number_of_Words.cpp)
add_executable(task519   Sum_of_Squares.cpp)
add_executable(task906   Product_of_Digits.cpp)
add_executable(task939   The_Square_of_Sum.cpp)
add_executable(task943   Digits_Permutation_in_3_Digit_Integer.cpp)
add_executable(task945   Without_the_Middle.cpp)
add_executable(task949   Two_Digits_From_Four_Digits.cpp)
add_executable(task953   Remainder.cpp)
add_executable(task955   The_Square_of_Sum_2.cpp)
add_executable(task959   Sum_of_Digits.cpp)
add_executable(task990   12345.cpp)
add_executable(task1024  Hello_World.cpp)
add_executable(task1104  Dominos.cpp)
add_executable(task1286  Tuck_Shop.cpp)
add_executable(task1621  The_Sum_From_1_to_n.cpp)
add_executable(task2370  Automated_Telephone_Exchange.cpp)
add_executable(task2860  Sum_of_Integers_on_The_Interval.cpp)
add_executable(task3254  01110001_That_is_the_Question.cpp)
add_executable(task4716  Divide_the_Apples_1.cpp)
add_executable(task4717  Divide_the_Apples_2.cpp)
add_executable(task5124  B_Casting.cpp)
add_executable(task5133  abc.cpp)
add_executable(task5175  The_Last_Digit.cpp)
add_executable(task5314  2^k+2^n.cpp)
add_executable(task5868  A_xor_B.cpp)
add_executable(task6777  Bus.cpp)
add_executable(task6827  Aaah.cpp)
add_executable(task7401  Stepan_Friends.cpp)
add_executable(task7440  Easy.cpp)
add_executable(task7491  Integer.cpp)
add_executable(task7943  Perimeter_of_Rectangl.cpp)
add_executable(tasl7944  Area_of_Rectangl.cpp)
add_executable(task8254  Hotel_Rooms.cpp)
add_executable(task8255  N_digit_Numbers_2.cpp)
add_executable(task8599  Digits_of_3_Digit_Number.cpp)
add_executable(task8600  Sum_and_Product_2.cpp)
add_executable(task8601  Swap_The_Digits_in_Two_Digit_Integer.cpp)
add_executable(task8602  Third_From_Right.cpp)
add_executable(task8603  Sum_and_Product_3.cpp)
add_executable(task8604  Sum_and_Product_of_Real_Numbers.cpp)
add_executable(task8605  Sum_of_Real_Numbers.cpp)
add_executable(task8606  Sum_of_Some_Real_Numbers.cpp)
add_executable(task8607  Sum_of_Squares_of_Digits.cpp)
add_executable(task8638  Append_Three.cpp)
add_executable(task8800  Hello_Python.cpp)
add_executable(task8801  Next_Number.cpp)
add_executable(task8802  Previous_Number.cpp)
add_executable(task8806  Number_of_Students.cpp)
add_executable(task8807  Opposite_Number.cpp)
add_executable(task8809  Marathon.cpp)
add_executable(task8810  School_Concert.cpp)
add_executable(task8811  Product_of_Two_Integers.cpp)
add_executable(task8813  Surface_Area_and_Volume_1.cpp)
add_executable(task8815  Surface_Area_and_Volume_2.cpp)
add_executable(task8824  Find_The_Number.cpp)
add_executable(task8825  Value_of_Variable_1.cpp)
add_executable(task8826  Value_of_Variable_2.cpp)
add_executable(task8827  Value_of_Variable_3.cpp)
add_executable(task8828  Value_of_Variable_4.cpp)
add_executable(task8829  Value_of_Variable_5.cpp)
add_executable(task8830  Value_of_Variable_6.cpp)
add_executable(task8831  Value_of_Expression_1.cpp)
add_executable(task8832  Value_of_Expression_2.cpp)
add_executable(task8837  Qoutient_and_Remainder.cpp)
add_executable(task8855  Find_The_Number_1.cpp)
add_executable(task8876  Integer_2.cpp)
add_executable(task8877  Perfect_Square.cpp)
add_executable(task9405  Professor_and_Balloons.cpp)
add_executable(task9406  Professor_and_Batteries.cpp)
add_executable(task9898  LinkedList_Sum.cpp)
add_executable(task9899  LinkedList_Length.cpp)
add_executable(task10041 LinkedList_Print_in_Reverse_Order.cpp)
add_executable(task10042 LinkedList_Cycle.cpp)
add_executable(task10043 LinkedList_Cycle_Starting_Point.cpp)
add_executable(task10044 LinkedList_Merge.cpp)
add_executable(task10045 LinkedList_Class.cpp)
add_executable(task10046 LinkedList_Reverse.cpp)
add_executable(task10047 LinkedList_Intersection.cpp)
add_executable(task10057 Tree_PreOrder_Traversal.cpp)
add_executable(task10059 Tree_InOrder_Traversal.cpp)
add_executable(task10060 Tree_PostOrder_Traversal.cpp)
add_executable(task10061 Tree_Minimum_Element.cpp)
add_executable(task10062 Tree_Maximum_Element.cpp)
add_executable(task10063 Tree_Find.cpp)
add_executable(task10064 Tree_Sum_Of_Elements.cpp)
add_executable(task10108 Tree_Same.cpp)
add_executable(task10109 Tree_Minimum_Depth.cpp)
add_executable(task10110 Tree_Maximum_Depth.cpp)
add_executable(task10111 Tree_Sum_of_Left_Leaves.cpp)
add_executable(task10112 Tree_Balanced.cpp)
add_executable(task10113 Tree_Sum_of_Leaves.cpp)
add_executable(task10114 Tree_Invert.cpp)
add_executable(task10115 Tree_Symmetric.cpp)