cmake_minimum_required(VERSION 3.10)

project(E_Olymp)

add_executable(task1     Task1_Simple_Problem.cpp)
add_executable(task2     Task2_Digits.cpp)
add_executable(task9     Task9_N_digit_Numbers.cpp)
add_executable(task115   Task115_Two_Digits.cpp)
add_executable(task141   Task141_The_Minimal_Sum_of_Digits.cpp)
add_executable(task219   Task219_Central_Heating.cpp)
add_executable(task248   Task248_Young_Gardener.cpp)
add_executable(task263   Task263_Three_Ones.cpp)
add_executable(task313   Task313_A+B.cpp)
add_executable(task314   Task314_A+B.cpp)
add_executable(task329   Task329_Number_of_Words.cpp)
add_executable(task519   Task519_Sum_of_Squares.cpp)
add_executable(task774   Task774_Cake.cpp)
add_executable(task902   Task902_The_Level_of_Educational_Achievements.cpp)
add_executable(task903   Task903_First_or_Last.cpp)
add_executable(task905   Task905_What_Type_of_Triangle.cpp)
add_executable(task906   Task906_Product_of_Digits.cpp)
add_executable(task909   Task909_Number_of_Words.cpp)
add_executable(task935   Task935_Decomposition_of_Three_Digit_number.cpp)
add_executable(task939   Task939_The_Square_of_Sum.cpp)
add_executable(task943   Task943_Digits_Permutation_in_3_Digit_Integer.cpp)
add_executable(task945   Task945_Without_the_Middle.cpp)
add_executable(task949   Task949_Two_Digits_From_Four_Digits.cpp)
add_executable(task953   Task953_Remainder.cpp)
add_executable(task955   Task955_The_Square_of_Sum.cpp)
add_executable(task959   Task959_Sum_of_Digits.cpp)
add_executable(task990   Task990_12345.cpp)
add_executable(task1024  Task1024_Hello_World.cpp)
add_executable(task1104  Task1104_Dominos.cpp)
add_executable(task1286  Task1286_Tuck_Shop.cpp)
add_executable(task1621  Task1621_The_Sum_From_1_to_n.cpp)
add_executable(task1623  Task1623_Even_and_Odd_Numbers.cpp)
add_executable(task2370  Task2370_Automated_Telephone_Exchange.cpp)
add_executable(task2606  Task2606_Minimum_and_Maximum.cpp)
add_executable(task2860  Task2860_Sum_of_Integers_on_The_Interval.cpp)
add_executable(task3254  Task3254_01110001_That_is_the_Question.cpp)
add_executable(task3867  Task3867_Lazy_Misha.cpp)
add_executable(task4716  Task4716_Divide_the_Apples.cpp)
add_executable(task4717  Task4717_Divide_the_Apples.cpp)
add_executable(task5124  Task5124_B_Casting.cpp)
add_executable(task5133  Task5133_abc.cpp)
add_executable(task5175  Task5175_The_Last_Digit.cpp)
add_executable(task5314  Task5314_2^k+2^n.cpp)
add_executable(task5868  Task5868_A_xor_B.cpp)
add_executable(task6278  Task6278_City_Numbers.cpp)
add_executable(task6777  Task6777_Bus.cpp)
add_executable(task6827  Task6827_Aaah.cpp)
add_executable(task7401  Task7401_Stepan_Friends.cpp)
add_executable(task7440  Task7440_Easy.cpp)
add_executable(task7460  Task7460_Sightseeing_Trip.cpp)
add_executable(task7491  Task7491_Integer.cpp)
add_executable(task7451  Task7451_Point.cpp)
add_executable(task7943  Task7943_Perimeter_of_Rectangl.cpp)
add_executable(task7944  Task7944_Area_of_Rectangl.cpp)
add_executable(task8239  Task8239_Function.cpp)
add_executable(task8241  Task8241_Function.cpp)
add_executable(task8242  Task8242_Positive_Negative_or_Zero.cpp)
add_executable(task8254  Task8254_Hotel_Rooms.cpp)
add_executable(task8255  Task8255_N_digit_Numbers.cpp)
add_executable(task8318  Task8318_Delete_Digits.cpp)
add_executable(task8319  Task8319_Simple_Calculator.cpp)
add_executable(task8320  Task8320_Title_String.cpp)
add_executable(task8371  Task8371_Even_or_Odd.cpp)
add_executable(task8372  Task8372_Create_a_Triangle.cpp)
add_executable(task8520  Task8520_Conditional_Statement.cpp)
add_executable(task8521  Task8521_Conditional_Statement.cpp)
add_executable(task8522  Task8522_Divisibility.cpp)
add_executable(task8526  Task8526_Conditional_Statement.cpp)
add_executable(task8531  Task8531_Divisibility_by_Numbers.cpp)
add_executable(task8569  Task8569_String_Length.cpp)
add_executable(task8570  Task8570_Length_of_Words.cpp)
add_executable(task8571  Task8571_Count_of_Letters.cpp)
add_executable(task8599  Task8599_Digits_of_3_Digit_Number.cpp)
add_executable(task8600  Task8600_Sum_and_Product.cpp)
add_executable(task8601  Task8601_Swap_The_Digits_in_Two_Digit_Integer.cpp)
add_executable(task8602  Task8602_Third_From_Right.cpp)
add_executable(task8603  Task8603_Sum_and_Product.cpp)
add_executable(task8604  Task8604_Sum_and_Product_of_Real_Numbers.cpp)
add_executable(task8605  Task8605_Sum_of_Real_Numbers.cpp)
add_executable(task8606  Task8606_Sum_of_Some_Real_Numbers.cpp)
add_executable(task8607  Task8607_Sum_of_Squares_of_Digits.cpp)
add_executable(task8610  Task8610_Previous_and_Next_Letter.cpp)
add_executable(task8614  Task8614_Inside_The_Interval.cpp)
add_executable(task8615  Task8615_Outside_The_Interval.cpp)
add_executable(task8638  Task8638_Append_Three.cpp)
add_executable(task8696  Task8696_Grades.cpp)
add_executable(task8800  Task8800_Hello_Python.cpp)
add_executable(task8801  Task8801_Next_Number.cpp)
add_executable(task8802  Task8802_Previous_Number.cpp)
add_executable(task8806  Task8806_Number_of_Students.cpp)
add_executable(task8807  Task8807_Opposite_Number.cpp)
add_executable(task8809  Task8809_Marathon.cpp)
add_executable(task8810  Task8810_School_Concert.cpp)
add_executable(task8811  Task8811_Product_of_Two_Integers.cpp)
add_executable(task8813  Task8813_Surface_Area_and_Volume.cpp)
add_executable(task8815  Task8815_Surface_Area_and_Volume.cpp)
add_executable(task8824  Task8824_Find_The_Number.cpp)
add_executable(task8825  Task8825_Value_of_Variable.cpp)
add_executable(task8826  Task8826_Value_of_Variable.cpp)
add_executable(task8827  Task8827_Value_of_Variable.cpp)
add_executable(task8828  Task8828_Value_of_Variable.cpp)
add_executable(task8829  Task8829_Value_of_Variable.cpp)
add_executable(task8830  Task8830_Value_of_Variable.cpp)
add_executable(task8831  Task8831_Value_of_Expression.cpp)
add_executable(task8832  Task8832_Value_of_Expression.cpp)
add_executable(task8837  Task8837_Qoutient_and_Remainder.cpp)
add_executable(task8855  Task8855_Find_The_Number.cpp)
add_executable(task8876  Task8876_Integer.cpp)
add_executable(task8877  Task8877_Perfect_Square.cpp)
add_executable(task8979  Task8979_Onle_One_Letter.cpp)
add_executable(task9051  Task9051_Class_Vector.cpp)
add_executable(task9405  Task9405_Professor_and_Balloons.cpp)
add_executable(task9406  Task9406_Professor_and_Batteries.cpp)
add_executable(task9518  Task9518_Accurate_Movement.cpp)
add_executable(task9519  Task9519_Bad_Treap.cpp)
add_executable(task9898  Task9898_LinkedList_Sum.cpp)
add_executable(task9899  Task9899_LinkedList_Length.cpp)
add_executable(task10041 Task10041_LinkedList_Print_in_Reverse_Order.cpp)
add_executable(task10042 Task10042_LinkedList_Cycle.cpp)
add_executable(task10043 Task10043_LinkedList_Cycle_Starting_Point.cpp)
add_executable(task10044 Task10044_LinkedList_Merge.cpp)
add_executable(task10045 Task10045_LinkedList_Class.cpp)
add_executable(task10046 Task10046_LinkedList_Reverse.cpp)
add_executable(task10047 Task10047_LinkedList_Intersection.cpp)
add_executable(task10057 Task10057_Tree_PreOrder_Traversal.cpp)
add_executable(task10059 Task10059_Tree_InOrder_Traversal.cpp)
add_executable(task10060 Task10060_Tree_PostOrder_Traversal.cpp)
add_executable(task10061 Task10061_Tree_Minimum_Element.cpp)
add_executable(task10062 Task10062_Tree_Maximum_Element.cpp)
add_executable(task10063 Task10063_Tree_Find.cpp)
add_executable(task10064 Task10064_Tree_Sum_Of_Elements.cpp)
add_executable(task10108 Task10108_Tree_Same.cpp)
add_executable(task10109 Task10109_Tree_Minimum_Depth.cpp)
add_executable(task10110 Task10110_Tree_Maximum_Depth.cpp)
add_executable(task10111 Task10111_Tree_Sum_of_Left_Leaves.cpp)
add_executable(task10112 Task10112_Tree_Balanced.cpp)
add_executable(task10113 Task10113_Tree_Sum_of_Leaves.cpp)
add_executable(task10114 Task10114_Tree_Invert.cpp)
add_executable(task10115 Task10115_Tree_Symmetric.cpp)