cmake_minimum_required(VERSION 3.10)

project(E_Olymp)

add_executable(task00001  Task00001_Simple_Problem.cpp)
add_executable(task00002  Task00002_Digits.cpp)
add_executable(task00009  Task00009_N_digit_Numbers.cpp)
add_executable(task00115  Task00115_Two_Digits.cpp)
add_executable(task00141  Task00141_The_Minimal_Sum_of_Digits.cpp)
add_executable(task00219  Task00219_Central_Heating.cpp)
add_executable(task00248  Task00248_Young_Gardener.cpp)
add_executable(task00263  Task00263_Three_Ones.cpp)
add_executable(task00313  Task00313_A+B.cpp)
add_executable(task00314  Task00314_A+B.cpp)
add_executable(task00329  Task00329_Number_of_Words.cpp)
add_executable(task00519  Task00519_Sum_of_Squares.cpp)
add_executable(task00774  Task00774_Cake.cpp)
add_executable(task00840  Task00840_Long_Sum.cpp)
add_executable(task00902  Task00902_The_Level_of_Educational_Achievements.cpp)
add_executable(task00903  Task00903_First_or_Last.cpp)
add_executable(task00905  Task00905_What_Type_of_Triangle.cpp)
add_executable(task00906  Task00906_Product_of_Digits.cpp)
add_executable(task00909  Task00909_Number_of_Words.cpp)
add_executable(task00935  Task00935_Decomposition_of_Three_Digit_number.cpp)
add_executable(task00939  Task00939_The_Square_of_Sum.cpp)
add_executable(task00943  Task00943_Digits_Permutation_in_3_Digit_Integer.cpp)
add_executable(task00945  Task00945_Without_the_Middle.cpp)
add_executable(task00949  Task00949_Two_Digits_From_Four_Digits.cpp)
add_executable(task00953  Task00953_Remainder.cpp)
add_executable(task00955  Task00955_The_Square_of_Sum.cpp)
add_executable(task00959  Task00959_Sum_of_Digits.cpp)
add_executable(task00990  Task00990_12345.cpp)
add_executable(task01024  Task01024_Hello_World.cpp)
add_executable(task01070  Task01070_Fill_the_Line.cpp)
add_executable(task01104  Task01104_Dominos.cpp)
add_executable(task01286  Task01286_Tuck_Shop.cpp)
add_executable(task01621  Task01621_The_Sum_From_1_to_n.cpp)
add_executable(task01623  Task01623_Even_and_Odd_Numbers.cpp)
add_executable(task02370  Task02370_Automated_Telephone_Exchange.cpp)
add_executable(task02606  Task02606_Minimum_and_Maximum.cpp)
add_executable(task02860  Task02860_Sum_of_Integers_on_The_Interval.cpp)
add_executable(task03254  Task03254_01110001_That_is_the_Question.cpp)
add_executable(task03867  Task03867_Lazy_Misha.cpp)
add_executable(task04716  Task04716_Divide_the_Apples.cpp)
add_executable(task04717  Task04717_Divide_the_Apples.cpp)
add_executable(task05124  Task05124_B_Casting.cpp)
add_executable(task05133  Task05133_abc.cpp)
add_executable(task05175  Task05175_The_Last_Digit.cpp)
add_executable(task05314  Task05314_2^k+2^n.cpp)
add_executable(task05868  Task05868_A_xor_B.cpp)
add_executable(task06278  Task06278_City_Numbers.cpp)
add_executable(task06777  Task06777_Bus.cpp)
add_executable(task06827  Task06827_Aaah.cpp)
add_executable(task07401  Task07401_Stepan_Friends.cpp)
add_executable(task07440  Task07440_Easy.cpp)
add_executable(task07460  Task07460_Sightseeing_Trip.cpp)
add_executable(task07491  Task07491_Integer.cpp)
add_executable(task07451  Task07451_Point.cpp)
add_executable(task07943  Task07943_Perimeter_of_Rectangl.cpp)
add_executable(task07944  Task07944_Area_of_Rectangl.cpp)
add_executable(task08239  Task08239_Function.cpp)
add_executable(task08241  Task08241_Function.cpp)
add_executable(task08242  Task08242_Positive_Negative_or_Zero.cpp)
add_executable(task08254  Task08254_Hotel_Rooms.cpp)
add_executable(task08255  Task08255_N_digit_Numbers.cpp)
add_executable(task08318  Task08318_Delete_Digits.cpp)
add_executable(task08319  Task08319_Simple_Calculator.cpp)
add_executable(task08320  Task08320_Title_String.cpp)
add_executable(task08371  Task08371_Even_or_Odd.cpp)
add_executable(task08372  Task08372_Create_a_Triangle.cpp)
add_executable(task08520  Task08520_Conditional_Statement.cpp)
add_executable(task08521  Task08521_Conditional_Statement.cpp)
add_executable(task08522  Task08522_Divisibility.cpp)
add_executable(task08526  Task08526_Conditional_Statement.cpp)
add_executable(task08531  Task08531_Divisibility_by_Numbers.cpp)
add_executable(task08569  Task08569_String_Length.cpp)
add_executable(task08570  Task08570_Length_of_Words.cpp)
add_executable(task08571  Task08571_Count_of_Letters.cpp)
add_executable(task08599  Task08599_Digits_of_3_Digit_Number.cpp)
add_executable(task08600  Task08600_Sum_and_Product.cpp)
add_executable(task08601  Task08601_Swap_The_Digits_in_Two_Digit_Integer.cpp)
add_executable(task08602  Task08602_Third_From_Right.cpp)
add_executable(task08603  Task08603_Sum_and_Product.cpp)
add_executable(task08604  Task08604_Sum_and_Product_of_Real_Numbers.cpp)
add_executable(task08605  Task08605_Sum_of_Real_Numbers.cpp)
add_executable(task08606  Task08606_Sum_of_Some_Real_Numbers.cpp)
add_executable(task08607  Task08607_Sum_of_Squares_of_Digits.cpp)
add_executable(task08610  Task08610_Previous_and_Next_Letter.cpp)
add_executable(task08614  Task08614_Inside_The_Interval.cpp)
add_executable(task08615  Task08615_Outside_The_Interval.cpp)
add_executable(task08638  Task08638_Append_Three.cpp)
add_executable(task08696  Task08696_Grades.cpp)
add_executable(task08800  Task08800_Hello_Python.cpp)
add_executable(task08801  Task08801_Next_Number.cpp)
add_executable(task08802  Task08802_Previous_Number.cpp)
add_executable(task08806  Task08806_Number_of_Students.cpp)
add_executable(task08807  Task08807_Opposite_Number.cpp)
add_executable(task08809  Task08809_Marathon.cpp)
add_executable(task08810  Task08810_School_Concert.cpp)
add_executable(task08811  Task08811_Product_of_Two_Integers.cpp)
add_executable(task08813  Task08813_Surface_Area_and_Volume.cpp)
add_executable(task08815  Task08815_Surface_Area_and_Volume.cpp)
add_executable(task08824  Task08824_Find_The_Number.cpp)
add_executable(task08825  Task08825_Value_of_Variable.cpp)
add_executable(task08826  Task08826_Value_of_Variable.cpp)
add_executable(task08827  Task08827_Value_of_Variable.cpp)
add_executable(task08828  Task08828_Value_of_Variable.cpp)
add_executable(task08829  Task08829_Value_of_Variable.cpp)
add_executable(task08830  Task08830_Value_of_Variable.cpp)
add_executable(task08831  Task08831_Value_of_Expression.cpp)
add_executable(task08832  Task08832_Value_of_Expression.cpp)
add_executable(task08837  Task08837_Qoutient_and_Remainder.cpp)
add_executable(task08855  Task08855_Find_The_Number.cpp)
add_executable(task08876  Task08876_Integer.cpp)
add_executable(task08877  Task08877_Perfect_Square.cpp)
add_executable(task08979  Task08979_Onle_One_Letter.cpp)
add_executable(task08986  Task08986_Delete_a_Fragment.cpp)
add_executable(task09051  Task09051_Class_Vector.cpp)
add_executable(task09405  Task09405_Professor_and_Balloons.cpp)
add_executable(task09406  Task09406_Professor_and_Batteries.cpp)
add_executable(task09518  Task09518_Accurate_Movement.cpp)
add_executable(task09519  Task09519_Bad_Treap.cpp)
add_executable(task09626  Task09626_startsWith_endsWith.cpp)
add_executable(task09898  Task09898_LinkedList_Sum.cpp)
add_executable(task09899  Task09899_LinkedList_Length.cpp)
add_executable(task10041  Task10041_LinkedList_Print_in_Reverse_Order.cpp)
add_executable(task10042  Task10042_LinkedList_Cycle.cpp)
add_executable(task10043  Task10043_LinkedList_Cycle_Starting_Point.cpp)
add_executable(task10044  Task10044_LinkedList_Merge.cpp)
add_executable(task10045  Task10045_LinkedList_Class.cpp)
add_executable(task10046  Task10046_LinkedList_Reverse.cpp)
add_executable(task10047  Task10047_LinkedList_Intersection.cpp)
add_executable(task10057  Task10057_Tree_PreOrder_Traversal.cpp)
add_executable(task10059  Task10059_Tree_InOrder_Traversal.cpp)
add_executable(task10060  Task10060_Tree_PostOrder_Traversal.cpp)
add_executable(task10061  Task10061_Tree_Minimum_Element.cpp)
add_executable(task10062  Task10062_Tree_Maximum_Element.cpp)
add_executable(task10063  Task10063_Tree_Find.cpp)
add_executable(task10064  Task10064_Tree_Sum_Of_Elements.cpp)
add_executable(task10108  Task10108_Tree_Same.cpp)
add_executable(task10109  Task10109_Tree_Minimum_Depth.cpp)
add_executable(task10110  Task10110_Tree_Maximum_Depth.cpp)
add_executable(task10111  Task10111_Tree_Sum_of_Left_Leaves.cpp)
add_executable(task10112  Task10112_Tree_Balanced.cpp)
add_executable(task10113  Task10113_Tree_Sum_of_Leaves.cpp)
add_executable(task10114  Task10114_Tree_Invert.cpp)
add_executable(task10115  Task10115_Tree_Symmetric.cpp)